Fixed solution item alignment on macos

--- a/components/SolutionPhase/styles.module.scss
+++ b/components/SolutionPhase/styles.module.scss
@@ -3,6 +3,10 @@
 .solutionList {
   margin-bottom: 2em;
 
+  span {
+    width: 1em;
+  }
+
   input {
     margin-left: 0.5em;
     margin-right: 0.5em;
